tests fixed: removed vlo importer dependency, fixed modules issue