@@ -19,7 +19,7 @@
 
     <properties>
         <wicket.version>8.14.0</wicket.version> <!-- if you update, make sure to also check wicket-bootstrap-core -->
-        <spring.version>5.3.23</spring.version>
+        <spring.version>5.3.24</spring.version>
         <clarin-basestyle.version>0.4.0</clarin-basestyle.version>
         <!-- selects the appender for the log4j root logger -->
         <log4j.appender>File</log4j.appender>
@@ -37,13 +37,13 @@
             <artifactId>vlo-exposure</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!-- Importer only used in web app for testing -->
+        <!--         Importer only used in web app for testing 
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>vlo-importer</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
-        </dependency>        
+        </dependency>        -->
         <!-- For exposure db in test -->
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -419,6 +419,16 @@
                 </configuration>
 
             </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- Allow JUnit to access the test classes -->
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+            
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
